# J.A.R.V.I.S

./: .env.example  .gitignore  @AGENT.md  @fix_plan.md  CLAUDE.md  PLAN.md  PROMPT.md  README.md  pi_info.md  pyproject.toml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: jarvis-api.service  jarvis-sync.service  jarvis-voice.service  obsidian.service  whoop-refresh.service  whoop-refresh.timer
docs/: ORCHESTRATION.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  SETUP_RECOVERY.md
scripts/: deploy.sh  oauth_setup.py  refresh_whoop_token.py  setup.sh  setup_pi4.sh  setup_pi5.sh  setup_services.sh  whoop_auth.py  whoop_exchange_code.py
src/jarvis/: __init__.py  api.py  cli.py
src/jarvis/adapters/: __init__.py  base.py  garmin.py  google_calendar.py  home_assistant.py  obsidian.py  outlook.py  whoop.py
src/jarvis/aggregators/: __init__.py  calendar.py  daily.py  health.py
src/jarvis/autonomous/: __init__.py  scheduler.py
src/jarvis/clawd/: __init__.py  agent.py  tools.py
src/jarvis/config/: __init__.py  settings.py
src/jarvis/db/: __init__.py  models.py
src/jarvis/static/: dashboard.html
src/jarvis/voice/: __init__.py  pipeline.py
tests/: conftest.py
